# cms-mongo-rust

./: .gitignore  docker-compose.yml
client-reactjs/: Dockerfile  package-lock.json  package.json
client-reactjs/src/: App.tsx  Root.tsx  main.tsx
client-reactjs/src/components/: About.tsx  Form.tsx  Holder.tsx  Student.tsx  StudentCard.tsx  StudentList.tsx  User.tsx
client-reactjs/src/utils/: api.ts  context.ts  model.ts  router.tsx
server-mongo-rust/: .env  Cargo.toml  Dockerfile
server-mongo-rust/src/: db.rs  error.rs  handler.rs  handlers.rs  main.rs  model.rs  response.rs  routes.rs  schema.rs  student.rs
