[package]
name = "server-mongo-rust"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }

# OLD SET
#tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
## recommended to use version = 0.6.20
#axum = {version = "0.6.20", features = ["headers"]}
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.68"
#mongodb = { version = "2.0.0", features = ["bson-chrono-0_4"] }
#os_info = "3.8.2"
#dotenv = "0.15.0"
#chrono = "0.4.35"
#thiserror = "1.0.58"
#futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
#tower-http = { version = "0.5.2", features = ["cors"] }
#bson = "2.9.0"